<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signIn"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/sign_in">

    <View
        android:id="@+id/back_btn"
        android:layout_width="16dp"
        android:layout_height="13dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/back_btn" />

    <View
        android:id="@+id/rectangle_5"
        android:layout_width="50dp"
        android:layout_height="234dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="320dp"
        android:layout_marginTop="-101dp"
        android:alpha="0.1"
        android:background="@drawable/rectangle_5"
        android:rotation="30"/>

    <View
        android:id="@+id/rectangle_6"
        android:layout_width="50dp"
        android:layout_height="270dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="360dp"
        android:layout_marginTop="-52dp"
        android:alpha="0.1"
        android:background="@drawable/rectangle_6"
        android:rotation="30" />

    <RelativeLayout
        android:id="@+id/component_1"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/component_one">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/travelm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center_vertical"
            android:lineSpacingExtra="13sp"
            android:text="@string/logo_text"
            android:textAppearance="@style/startpage_logo" />

    </RelativeLayout>

    <TextView
        android:id="@+id/welcome_to_"
        android:layout_width="252dp"
        android:layout_height="88dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="140dp"
        android:fontFamily="@font/nunito"
        android:gravity="top"
        android:lineSpacingExtra="0sp"
        android:text="@string/welcome_to_"
        android:textAppearance="@style/welcome_to_" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/email"
            android:textColorHint="#A5A7AC" />

        <View
            android:id="@+id/line_5"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="24dp"
            android:alpha="0.5"
            android:background="@drawable/line_5" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="24dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/Password"
            android:textAppearance="@style/password"
            android:textColorHint="#A5A7AC" />

        <View
            android:id="@+id/line_6"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="110dp"
            android:layout_marginRight="24dp"
            android:alpha="0.5"
            android:background="@drawable/line_5" />
    </RelativeLayout>

    <TextView
        android:id="@+id/sign_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="460dp"
        android:gravity="top"
        android:lineSpacingExtra="2sp"
        android:text="@string/labelSignIn"
        android:textAppearance="@style/sign_in"
        android:translationY="-0.9sp" />

    <View
        android:id="@+id/next_btn"
        android:layout_width="64.44dp"
        android:layout_height="64.44dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="450dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/group_115" />

    <TextView
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="50dp"
        android:gravity="top"
        android:text="@string/register"
        android:textAppearance="@style/register" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:gravity="right|top"
        android:text="@string/forgot_pass"
        android:textAppearance="@style/register" />

</RelativeLayout>