<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/city"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView3"
            android:layout_width="match_parent"
            android:layout_height="400dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="412dp"
                    android:layout_height="400dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/a1" />

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="412dp"
                    android:layout_height="400dp"
                    android:adjustViewBounds="true"
                    android:alpha="1"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/a2" />

                <ImageView
                    android:id="@+id/imageView9"
                    android:layout_width="412dp"
                    android:layout_height="400dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/a3" />

            </LinearLayout>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                app:srcCompat="@drawable/vector_4" />

            <View
                android:id="@+id/view3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                app:srcCompat="@drawable/like_btn" />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="250dp"
            android:background="@drawable/corner">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingTop="20dp"
                    android:paddingEnd="20dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/nunito_bold"
                        android:text="@string/hobart"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:gravity="end"
                        android:text="@string/rank"
                        app:drawableStartCompat="@drawable/star" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:gravity="end"
                        android:text="@string/total_num" />

                </LinearLayout>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    app:tabIndicatorColor="#FF455B"
                    app:tabIndicatorFullWidth="false"
                    app:tabRippleColor="@android:color/transparent"
                    app:tabSelectedTextColor="#FF455B"
                    app:tabTextAppearance="@style/TextAppearance.AppCompat.Small">

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/overview" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/details" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reviews" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/costs" />
                </com.google.android.material.tabs.TabLayout>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <androidx.viewpager2.widget.ViewPager2
                            android:id="@+id/pager"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal" />
                    </LinearLayout>
                </ScrollView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false"
                    android:orientation="horizontal"
                    android:paddingStart="20dp"
                    android:paddingTop="15dp"
                    android:paddingEnd="20dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView11"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/nunito_bold"
                            android:text="@string/five_days"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            app:drawableStartCompat="@drawable/time" />

                        <TextView
                            android:id="@+id/textView12"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/nunito_semibold"
                            android:text="@string/duration"
                            android:textColor="#A5A7AC"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"></LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView14"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/nunito_bold"
                            android:text="@string/km"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            app:drawableStartCompat="@drawable/location" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/nunito_semibold"
                            android:text="@string/distance"
                            android:textColor="#A5A7AC"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"></LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/nunito_bold"
                            android:text="@string/temperature"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            app:drawableStartCompat="@drawable/sun" />

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/nunito_semibold"
                            android:text="@string/sunny"
                            android:textColor="#A5A7AC"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="TextView" />
                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
