<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/start">

    <RelativeLayout
        android:id="@+id/component_1"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="54dp"
        android:background="@drawable/component_one">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/travelm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:fontFamily="@font/nunito_bold"
            android:gravity="center_vertical"
            android:lineSpacingExtra="13sp"
            android:text="@string/logo_text"
            android:textAppearance="@style/startpage_logo" />

    </RelativeLayout>

    <TextView
        android:id="@+id/enjoy_your_"
        android:layout_width="246dp"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/nunito_bold"
        android:gravity="center_vertical"
        android:lineSpacingExtra="2sp"
        android:text="@string/enjoy_your_"
        android:textAppearance="@style/enjoy_your_" />

    <RelativeLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/beach" />

    <TextView
        android:id="@+id/keep_you_tr"
        android:layout_width="327dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="226dp"
        android:gravity="top"
        android:lineSpacingExtra="2sp"
        android:text="@string/keep_you_tr"
        android:textAppearance="@style/keep_you_tr"
        android:translationY="-1.09sp" />

    <RelativeLayout
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="280dp"
        android:background="@drawable/button" />

</RelativeLayout>